# hw_web_mod11_7

./: README.md  alembic.ini  config.ini  my_select.py  pyproject.toml  seed.py
migratios/versions/: cb01501c6e66_init.py
src/: db.py  models.py
