[tool.poetry]
name = "hw-web-11-7"
version = "0.1.0"
description = ""
authors = ["Nataliya2401 <sabotab2000@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_web_11_7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.15"
faker = "^18.10.1"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
